# quadratic-torsion

./: .gitignore  README.md  pyproject.toml  results.py  results_v2.py  torsion_groups.py
computations/: positive_rank_quadratic_twists.ipynb  stage_talk.m  x1_13.m  x1_13_log.txt  x1_16_abc_triples.json  x1_16_abc_triples.m  x1_16_abc_triples_log.txt  x1_16_chabauty.m  x1_16_chabauty_log.txt  x1_16_point_search.m  x1_16_point_search_log.txt  x1_16_quadratic_chabauty.m  x1_18.m  x1_18_log.txt
genus_one_lists/: 11_list.txt  14_list.txt  15_list.txt  2_10_list.txt  2_12_list.txt
granville/: euclidean_contribution.ipynb
granville_constants/: HeightOfGens.m  kappa16.py  kappa_consts.py  output.csv  runningVals.txt  x1_13.m
graphs/: results.py
logs/: MWSieve-x1_13_log.txt  MWSieve-x1_18_log.txt  elliptic_rank_verifs_log.txt  positive_rank_twists_log.txt  torsionVerifications_log.txt  x1_13_log.txt  x1_16_abc_triples_list.txt  x1_16_abc_triples_log.txt  x1_16_point_search_log.txt  x1_18_log.txt
magma_scripts/: 13Twist79.m  MWSieve-new.m  MWSieve-x1_13.m  MWSieve-x1_16.m  MWSieve-x1_18.m  antonela.m  elliptic.m  elliptic_chabauty.m  elliptic_chabauty_log.txt  elliptic_chabauty_log2.txt  elliptic_chabauty_log_1000.txt  genus2_hyperelliptic.m  genus3_hyperelliptic.m  genus3_smooth_quartic.m  genus5_locally_solvable_twist.m  genus_subgroups.py  point_search.m  point_search_log.txt  positive_rank_twist_16.m  positive_rank_twist_16_log.txt  positive_rank_twists.m  torsionVerifications.m  torsion_twist_16.m  x1_16_point_search.m
positive_rank_lists/: 11_list.json  (+7 more)
(+7 files in other folders)
