[tool.poetry]
name = "quadratic-torsion"
version = "0.1.0"
description = "Code to compute the torsion subgroups that occur over a fixed quadratic field."
authors = ["Maarten Derickx <maarten@mderickx.nl>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "quadratic_torsion"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
